src/index.css
@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;
:root {
  --white: hsl(0, 0%, 100%);
  --light-grayish-violet: hsl(270, 3%, 87%);
  --dark-grayish-violet: hsl(279, 6%, 55%);
  --very-dark-violet: hsl(278, 68%, 11%);
  --linear-gradient: hsl(249, 99%, 64%) to hsl(278, 94%, 30%);
  --red: hsl(0, 100%, 66%);
}
* {
  font-family: 'Space Grotesk', Avenir, Helvetica, Arial, sans-serif;
  box-sizing: border-box;
  /* font-size: 18px; */
}

/* form {
  margin-top: 35px;
} */

.card-front {
  position: relative;
  right: 1.5rem;
  top: 9rem;
  z-index: 20;
  background: url('assets/bg-card-front.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 175px;
  width: 315px;
  border-radius: 7px;
}
.card-back {
  position: relative;
  left: 1.5rem;
  bottom: 8rem;
  z-index: -1;
  background: url('assets/bg-card-back.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 175px;
  width: 315px;
  border-radius: 7px;
}
.cards-container {
  margin: auto;
}

.cards-orientation {
  width: 100vw;
  @apply flex flex-col justify-center items-center;
}

.card-back p {
  top: 4.9rem;
}

form label {
  @apply block uppercase tracking-wide mb-2;
  color: var(--very-dark-violet);
}

form input {
  @apply border-2 rounded py-2 px-4 w-full;

  border-color: var(--light-grayish-violet);
}
button {
  background-color: var(--very-dark-violet);

  @apply py-3 px-6 rounded shadow text-white lg:text-lg;
}

@media (min-width: 1024px) {
  .card-back {
    top: 1rem;
    height: 225px;
    width: 405px;
    border-radius: 10px;
  }

  .card-front {
    left: 1.5rem;
    top: -1rem;
    /* bottom: 20rem; */
    height: 225px;
    width: 405px;
    border-radius: 10px;
  }

  .card-back p {
    top: 6.2rem;
  }

  .cards-container {
    @apply mt-10 mx-5;
    /* align-self: center; */
    margin: auto;
  }
}

.tracking-widest-xl {
  letter-spacing: 0.25em;
}

.dark-violet {
  color: var(--very-dark-violet);
}

